# gcp-pubsub-events

./: .gitignore  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  example.py  library_emulator_test.py  pubsub_listener.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test_library_emulator.py
.github/workflows/: README.md  build-and-publish.yml  ci-cd.yml  integration-tests.yml
examples/: README.md  advanced_example.py  basic_example.py  fastapi_best_practices.md  fastapi_example.py  fastapi_integration.py  improved_fastapi_lifespan.py  quickstart.py  simple_example.py
gcp_pubsub_events/: __init__.py
gcp_pubsub_events/core/: client.py
gcp_pubsub_listener.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/gcp_pubsub_events/: __init__.py  simple.py
src/gcp_pubsub_events/core/: client.py  manager.py  resources.py
tests/: conftest.py
tests/docker/: Dockerfile  run-tests-with-emulator.sh
tests/e2e/: test_complete_workflow.py
tests/integration/: test_emulator_integration.py  test_fastapi_integration.py  test_resource_integration.py
tests/performance/: benchmark_throughput.py
tests/unit/: test_acknowledgement.py  test_manager.py  test_resources.py
