# setup.cfg - Configuration for tools that don't support pyproject.toml yet

[metadata]
name = gcp-pubsub-events
version = attr: gcp_pubsub_events.__version__

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11

[options.packages.find]
where = src

[flake8]
max-line-length = 100
extend-ignore = E203, W503
exclude = 
    .git,
    __pycache__,
    docs/source/conf.py,
    old,
    build,
    dist,
    .eggs,
    *.egg-info,
    .tox,
    .mypy_cache,
    .pytest_cache